fixed cookie popup text possibly overflowing popup

--- a/frontend/src/styles/popups.scss
+++ b/frontend/src/styles/popups.scss
@@ -604,6 +604,8 @@
         .textButton {
           padding: 0;
           padding-top: 0.25em;
+          width: unset;
+          text-align: unset;
         }
       }
     }
